--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/M.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/M.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Сайт кейтеринга Maxvell kitchen" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/M.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/M.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Maxvel kitchen</title>
   </head>
